Created custom version number in POMs; fixed local CSS and other file resolution